--- a/index.hmtl.html
+++ b/index.hmtl.html
@@ -7,7 +7,7 @@
 
 </head>
 
-<img class="fit-picture" src="Progress.jpg" alt="Progress Campus">
+<img class="banner" src="Progress.jpg"  alt="Progress Campus" class="center">
 
 <body style="font-family: Verdana">
     <!-- 
