--- a/index.hmtl.html
+++ b/index.hmtl.html
@@ -7,13 +7,59 @@
 
 </head>
 
-<img class="banner" src="Progress.jpg"  alt="Progress Campus" class="center">
+<img class="banner" src="Progress.jpg" alt="Progress Campus" class="center">
+<style>
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
 
 <body style="font-family: Verdana">
     <!-- 
 Hello Miss, this is my HTML Comment.:)
 Name: Aneil Francis
 Student Number: 301260155-->
+    <style>
+        h1 {
+            text-align: center;
+        }
+
+        h2 {
+            text-align: center;
+        }
+
+        h5 {
+            text-align: center;
+        }
+
+        ul {
+            text-align: center;
+        }
+
+        h3 {
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+        }
+
+        div {
+            text-align: center;
+        }
+
+        div.container {
+            text-align: center;
+        }
+
+        ul.myUL {
+            display: inline-block;
+            text-align: left;
+        }
+    </style>
+
 
     <body bgcolor=”#A9DEFF">
         <h1><u>Comp 213, Aneil, Semester 1</u></h1>
@@ -21,19 +67,22 @@ Student Number: 301260155-->
 
 
     <body>
-        <h2>Aneil Francis, 301260155</h2>
+        <h2>Aneil Francis </h2>
     </body>
 
     <body>
         <h5> My Hobbies/Activities
-            <ul>
-                <li>Playing Sports</li>
-                <li>Video Games</li>
-                <li>Driving my Car</li>
-                <li>Listening to Music</li>
-                <li>Watching TV Shows</li>
-                <li>Outdoor Activities</li>
-            </ul>
+            <div class="container">
+
+                <ul class="myUL">
+                    <li>Playing Sports</li>
+                    <li>Video Games</li>
+                    <li>Driving my Car</li>
+                    <li>Listening to Music</li>
+                    <li>Watching TV Shows</li>
+                    <li>Outdoor Activities</li>
+                </ul>
+            </div>
         </h5>
     </body>
 
@@ -45,7 +94,7 @@ Student Number: 301260155-->
         <h3>A little bit more about me.</h3>
         <!--Font looks a bit different here, due to the paragraph tag I used.-->
         <p style="font-family: Verdana">I am studying Software Engineering. This is my first semester
-            at Centnnial College and my program is for 3 years.</p>
+            at Centennial College and my program is for 3 years.</p>
 
     </body>
     </head>
@@ -62,7 +111,7 @@ Student Number: 301260155-->
     </head>
 
     <body>
-        <div class="footer">&copy; Aneil, 301260155, COMP213, Semester 1</div>
+        <div class="footer">&copy; Aneil, COMP213, Semester 1</div>
     </body>
 
 
