--- a/index.hmtl.html
+++ b/index.hmtl.html
@@ -79,7 +79,7 @@ Student Number: 301260155-->
                     <li>Video Games</li>
                     <li>Driving my Car</li>
                     <li>Listening to Music</li>
-                    <li>Watching TV Shows</li>
+                    <li>Hanging out with Friends</li>
                     <li>Outdoor Activities</li>
                 </ul>
             </div>
