--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- 
 Hello Miss, this is my HTML Comment.:)
 Name: Aneil Francis
-Student Number: 301260155-->
+Student Number: 30XXXXXXX-->
     <style>
         h1 {
             text-align: center;
